# futu-stocp-mcp-server

./: .env.example  .futu_mcp.pid  .gitignore  README.md  pyproject.toml
.cursor/: mcp.json
api-doc/: api-http.md  api.md  broker-handler-api.md  cur-kline-handler-api.md  get-broker-queue-api.md  get-capital-distribution-api.md  get-capital-flow-api.md  get-cur-kline-api.md  get-future-info-api.md  get-global-state-api.md  get-history-kl-quota-api.md  get-market-snapshot-api.md  get-market-state-api.md  get-option-chain-api.md  get-option-expiration-date-api.md  get-order-book-api.md  get-owner-plate-api.md  get-plate-capital-flow-api.md  get-plate-history-capital-flow-api.md  get-plate-history-intraday-api.md  get-plate-history-klines-api.md  get-plate-history-tick-api.md  get-plate-history-time-share-api.md  get-plate-history-trades-api.md  get-plate-kline-api.md  get-plate-list-api.md  get-plate-rt-kline-api.md  get-plate-rt-quote-api.md  get-plate-rt-tick-api.md  get-plate-stock-api.md  get-price-reminder-api.md  get-referencestock-list-api.md  get-rehab-api.md  get-rt-data-api.md  get-rt-ticker-api.md  get-stock-basicinfo-api.md  get-stock-filter-api.md  get-stock-list-api.md  get-stock-quote-api.md  get-user-security-api.md  (+14 more)
src/: clent.py  futu_demo.py
src/futu_stock_mcp_server/: server.py
