[project]
name = "futu-stock-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for accessing Futu OpenAPI functionality"
requires-python = ">=3.10"
dependencies = [
    "futu-api",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "websockets",
    "aiohttp",
    "loguru",
    "mcp[cli]>=1.6.0",
    "psutil"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/futu_stock_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.rye]
managed = true
dev-dependencies = [
    "psutil"
] 